syntax = "proto3";

package com.akhazov.grpc.usercacheserver;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option java_multiple_files = true;

service CacheUserService {

  rpc getUserById(GetCachedUserByIdGrpcRequest) returns (GetCachedUserByIdGrpcResponse) {}

  rpc evictUserById(EvictUserGrpcRequest) returns (google.protobuf.Empty) {}

}

message GetCachedUserByIdGrpcRequest {
  int32 userId = 1;
}

message GetCachedUserByIdGrpcResponse {
  int32 userId = 1;
  string firstName = 2;
  string lastName = 3;
  string userStatus = 4;
  google.protobuf.Timestamp creationDate = 5;
}

message EvictUserGrpcRequest {
  int32 userId = 1;
}
